[package]
name = "API-gateway-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
hyper = "1.3.1"
hyper-tls = "0.6.0"
jsonwebtoken = "9.3.0"
serde = "1.0.202"
serde_json = "1.0.117"
tokio = "1.37.0"
